# WasmEdge

./: README.md
include/common/: tracer.h
lib/api/: wasmedge.cpp
lib/common/: CMakeLists.txt  tracer.cpp
tools/wasmedge/: wasmedger.cpp
